Was too lazy to write the changes made

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -34,9 +34,9 @@
   "second_term_avg": "Second Term Avg",
   "third_term_avg": "Third Term Avg",
   "final_avg": "Final Average",
-  "class_average": "Class Average: {{value}}",
-  "pass_percentage": "Pass Percentage: {{value}}%",
-  "download_pdf": "Download PDF",
+  "class_average_with_value": "Class Average: {{value}}",
+  "pass_percentage_with_value": "Pass Percentage: {{value}}%",
+  "download_pdf_old": "Download PDF",
   "student_list": "Student List",
   "name": "Name",
   "actions": "Actions",
@@ -75,5 +75,112 @@
   "or": "OR",
   "signin_with_google": "Sign in with Google",
   "signup_with_google": "Sign up with Google",
-  "google_signin_error": "Failed to sign in with Google. Please try again."
+  "google_signin_error": "Failed to sign in with Google. Please try again.",
+  "home": "Home",
+  "grades": "Grades",
+  "calculate_nav": "Calculate",
+  "print": "Print",
+  "good_morning": "Good morning",
+  "good_afternoon": "Good afternoon",
+  "good_evening": "Good evening",
+  "welcome_back": "Welcome back to Brain-Board",
+  "student_performance": "Student Performance",
+  "school_events": "School Year Activities",
+  "testimonials": "What teachers say",
+  "share_experience": "Share your experience",
+  "feedback_description": "Tell us how Brain-Board helped you improve your teaching and student management.",
+  "your_name": "Your Name",
+  "your_role": "Your Role",
+  "your_feedback": "Your Feedback",
+  "feedback_placeholder": "Share your experience with Brain-Board...",
+  "sending": "Sending...",
+  "send_feedback": "Send Feedback",
+  "feedback_sent": "Thanks! Your feedback has been sent.",
+  "close": "Close",
+  "pass_rate": "Pass Rate",
+  "grades_management": "Grades Management",
+  "manage_students_subjects": "Manage your students and subjects efficiently",
+  "total_students": "Total Students",
+  "total_subjects": "Total Subjects",
+  "avg_subject_total": "Avg Subject Total",
+  "students_list": "Students List",
+  "subjects_list": "Subjects List",
+  "no_students_yet": "No students added yet",
+  "add_first_student": "Add your first student to get started",
+  "no_subjects_yet": "No subjects added yet",
+  "add_first_subject": "Add your first subject to get started",
+  "student_id": "Student ID",
+  "active": "Active",
+  "view_details": "View Details",
+  "max_score": "Max Score",
+  "points": "points",
+  "difficulty_level": "Difficulty Level",
+  "high": "High",
+  "medium": "Medium",
+  "low": "Low",
+  "view_analytics": "View Analytics",
+  "add_student": "Add Student",
+  "add_subject": "Add Subject",
+  "enter_marks_calculate": "Enter marks and calculate student results",
+  "setup_required": "Setup Required",
+  "add_students_subjects_first": "Please add students and subjects first in the Grades section",
+  "add_students_first": "Please add students first in the Grades section",
+  "add_subjects_first": "Please add subjects first in the Grades section",
+  "results_view": "Results View",
+  "print_view": "Print View",
+  "results_coming_soon": "Advanced results analytics coming soon!",
+  "print_coming_soon": "Advanced printing features coming soon!",
+  "calculate_marks": "Calculate Marks",
+  "enter_marks_and_calculate": "Enter student marks, add comments, and calculate results",
+  "marks_entered": "Marks Entered",
+  "completion_rate": "Completion Rate",
+  "current_sequence": "Current Sequence",
+  "overall_progress": "Overall Progress",
+  "calculation_process": "Calculation Process",
+  "enter_marks": "Enter Marks",
+  "input_student_marks": "Input student marks and comments",
+  "calculate_action": "Calculate",
+  "process_calculations": "Process calculations and generate results",
+  "view_results": "View Results",
+  "review_calculated_results": "Review calculated results in Results page",
+  "marks_entry_section": "Marks Entry Section",
+  "enter_marks_and_comments_desc": "Enter marks and comments for each student",
+  "complete": "Complete",
+  "select_sequence": "Select Sequence",
+  "calculating": "Calculating...",
+  "calculate_sequence": "Calculate Sequence",
+  "calculate_terms": "Calculate Terms",
+  "bulk_entry": "Bulk Entry",
+  "auto_saved": "Auto-saved",
+  "calculation_complete": "Calculation completed successfully! Check the Results page to view detailed results.",
+  "go_to_grades": "Go to Grades",
+  "results_analytics": "Results & Analytics",
+  "view_analyze_results": "View and analyze calculated student results with advanced insights",
+  "refresh_data": "Refresh Data",
+  "share_results": "Share Results",
+  "table_view": "Table View",
+  "analytics_view": "Analytics View",
+  "class_average": "Class Average",
+  "passed_students": "Passed Students",
+  "top_rank": "Top Rank",
+  "sequence_results": "Sequence Results",
+  "first_term_results": "First Term Results",
+  "second_term_results": "Second Term Results",
+  "third_term_results": "Third Term Results",
+  "annual_results": "Annual Results",
+  "detailed_results_table": "Detailed results table with rankings and statistics",
+  "download_pdf": "Download PDF",
+  "generate_reports": "Generate Reports",
+  "analytics_coming_soon": "Advanced analytics charts and visualizations coming soon! For now, enjoy the enhanced table view below.",
+  "download_results": "Download Results",
+  "no_results_yet": "No Results Available",
+  "calculate_results_first": "Please calculate results first in the Calculate section to view them here.",
+  "go_to_calculate": "Go to Calculate",
+  "back_to_selection": "Back to Selection",
+  "sequence_feature": "Sequence",
+  "view_sequence_results": "View results for individual sequences",
+  "terms_feature": "Terms",
+  "view_term_results": "View results for terms and annual averages",
+  "available": "Available",
+  "no_data_available": "No data available"
 }
