--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -75,5 +75,59 @@
   "or": "OU",
   "signin_with_google": "Se connecter avec Google",
   "signup_with_google": "S'inscrire avec Google",
-  "google_signin_error": "Échec de la connexion avec Google. Veuillez réessayer."
+  "google_signin_error": "Échec de la connexion avec Google. Veuillez réessayer.",
+  "home": "Accueil",
+  "grades": "Notes",
+  "calculate": "Calculer",
+  "print": "Imprimer",
+  "good_morning": "Bonjour",
+  "good_afternoon": "Bon après-midi",
+  "good_evening": "Bonsoir",
+  "welcome_back": "Bienvenue sur Brain-Board",
+  "student_performance": "Performance des Élèves",
+  "school_events": "Activités de l'Année Scolaire",
+  "testimonials": "Ce que disent les enseignants",
+  "share_experience": "Partagez votre expérience",
+  "feedback_description": "Dites-nous comment Brain-Board vous a aidé à améliorer votre enseignement et la gestion des élèves.",
+  "your_name": "Votre Nom",
+  "your_role": "Votre Rôle",
+  "your_feedback": "Vos Commentaires",
+  "feedback_placeholder": "Partagez votre expérience avec Brain-Board...",
+  "sending": "Envoi en cours...",
+  "send_feedback": "Envoyer les Commentaires",
+  "feedback_sent": "Merci ! Vos commentaires ont été envoyés.",
+  "close": "Fermer",
+  "pass_rate": "Taux de Réussite",
+  "grades_management": "Gestion des Notes",
+  "manage_students_subjects": "Gérez vos élèves et matières efficacement",
+  "total_students": "Total Élèves",
+  "total_subjects": "Total Matières",
+  "avg_subject_total": "Total Moyen Matière",
+  "students_list": "Liste des Élèves",
+  "subjects_list": "Liste des Matières",
+  "no_students_yet": "Aucun élève ajouté pour le moment",
+  "add_first_student": "Ajoutez votre premier élève pour commencer",
+  "no_subjects_yet": "Aucune matière ajoutée pour le moment",
+  "add_first_subject": "Ajoutez votre première matière pour commencer",
+  "student_id": "ID Élève",
+  "active": "Actif",
+  "view_details": "Voir Détails",
+  "max_score": "Score Max",
+  "points": "points",
+  "difficulty_level": "Niveau de Difficulté",
+  "high": "Haut",
+  "medium": "Moyen",
+  "low": "Bas",
+  "view_analytics": "Voir Analytiques",
+  "add_student": "Ajouter Élève",
+  "add_subject": "Ajouter Matière",
+  "enter_marks_calculate": "Entrez les notes et calculez les résultats des élèves",
+  "setup_required": "Configuration Requise",
+  "add_students_subjects_first": "Veuillez d'abord ajouter des élèves et des matières dans la section Notes",
+  "add_students_first": "Veuillez d'abord ajouter des élèves dans la section Notes",
+  "add_subjects_first": "Veuillez d'abord ajouter des matières dans la section Notes",
+  "results_view": "Vue Résultats",
+  "print_view": "Vue Impression",
+  "results_coming_soon": "Analyses avancées des résultats bientôt disponibles!",
+  "print_coming_soon": "Fonctionnalités d'impression avancées bientôt disponibles!"
 }
